# statusline

./: Cargo.toml  LICENSE  README.md  Taskfile.yml
src/: main.rs
