[package]
name = "statusline"
version = "0.1.0"
edition = "2021"
description = "A status line for Claude Code — model, context, session time, token counts, and usage limits."
authors = ["Alexandre Malucelli <alexandre@malucelli.net>"]
license = "MIT"
repository = "https://github.com/amalucelli/statusline"
homepage = "https://github.com/amalucelli/statusline"
readme = "README.md"
keywords = ["claude", "claude-code", "statusline", "cli", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ureq = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
